--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,11 @@
   "description": "componente de login",
   "main": "componente-login.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "paper-card": "https://github.com/PolymerElements/paper-card.git#2.1.0",
+    "paper-input": "https://github.com/PolymerElements/paper-input.git#2.2.0",
+    "paper-button": "https://github.com/PolymerElements/paper-button.git#2.1.3",
+    "paper-checkbox": "https://github.com/PolymerElements/paper-checkbox.git#2.0.1"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
